syntax = "proto3";
package pb;

message HealthCheckRequest {
}

message HealthCheckResponse {
    string status = 1;
}
